[package]
name = "velen"
version = "0.1.0"
edition = "2021"
description = "A simple package for making REST APIs"
license = "MIT OR Apache-2.0"
documentation = "in progress"
homepage = "in progress"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"