[package]
name = "velen"
version = "0.1.3"
edition = "2021"
description = "A simple package for making REST APIs"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/iamparnab/velen/blob/master/README.md"
homepage = "https://github.com/iamparnab/velen"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"